test/files/neg/t6323a.check
t6323a.scala:10: materializing requested scala.reflect.type.ClassTag[Test] using `package`.this.materializeClassTag[Test]()
      val lookAtMe = m.reflect(Test("a",List(5)))
                              ^
t6323a.scala:11: materializing requested reflect.runtime.universe.type.TypeTag[Test] using `package`.this.materializeTypeTag[Test](scala.reflect.runtime.`package`.universe)
      val value = u.typeOf[Test]
                          ^
t6323a.scala:11: `package`.this.materializeTypeTag[Test](scala.reflect.runtime.`package`.universe) is not a valid implicit value for reflect.runtime.universe.TypeTag[Test] because:
failed to typecheck the materialized tag: 
cannot create a TypeTag referring to local class Test.Test: use WeakTypeTag instead
      val value = u.typeOf[Test]
                          ^
t6323a.scala:11: error: No TypeTag available for Test
      val value = u.typeOf[Test]
                          ^
one error found
